src/test/ui/parser/doc-before-identifier.stderr
error: expected identifier, found `/// document`
  --> $DIR/doc-before-identifier.rs:13:4
   |
LL | fn /// document
   |    ^^^^^^^^^^^^ expected identifier

error: aborting due to previous error

